api-gateway/k8s/ingress-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: rewabank-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rewabank-ingress-vs
  namespace: banking
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/rewabank-gateway
  http:
    - match:
        - uri:
            prefix: /auth

      route:
        - destination:
            host: keycloak-keycloakx-http.keycloak.svc.cluster.local
            port:
              number: 80
      timeout: 30s

    - match:
        - uri:
            prefix: /api/v1
      route:
        - destination:
            host: api-gateway-service.banking.svc.cluster.local
            port:
              number: 8072
      timeout: 30s
